--- a/style.css
+++ b/style.css
@@ -1,17 +1,29 @@
 *{
     margin: 0;
 }
+
+h2{
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+/*slider*/
+
+
+
 /*barra nav*/
 nav{
     background-color: #045768;
-    
+    height: 75px;
 }
-.navbar{
+
+.list{
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
+    flex-direction: row;
+    justify-content: center;
+    padding: 30px;
 }
 
 li{
@@ -32,9 +44,12 @@ a{
 
 #iconito{
     color: #cfc2aa;
-    display: inline-block;
-    align-items: end;
+    font-size: 30px;    
+    position: relative;
+    left: 1270px;
+    bottom: 65px;
 }
+
 
 /*fondo*/
 body{
@@ -43,9 +58,12 @@ body{
 
 /*banner*/
 .banner{
-    display: block;
-    width: 50%;
+    width: 1200px;
+    height: 480px;
     margin: auto;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    background-color: #080a0a;
 }
 
 /*box productos*/
@@ -59,6 +77,7 @@ body{
 
 .contenedor{
     display: flex;
+    justify-content: space-evenly;
 }
 
 img{
@@ -67,38 +86,96 @@ img{
     
 }
 
-input{
+.boton{
    text-align: center;
+   display: flex;
+   justify-content: center;
+   padding-top: 15px;
 }
 
-.boton{
+input{
     background-color: #f7d99f;
     color: #119cb8;
     border: none;
     cursor: pointer;
     border-radius: 8px;
-    width: 100px;
-    height: 45px;
+    width: 157px;
+    height: 40px;
     transition: 0.3s;
 }
-.boton:hover{
+input:hover{
     background-color: #045768;
     box-shadow: 0 0 0 5px #3b83f65f;
     color: #fff;
 }
 
+#text{
+    padding: 15px;
+    margin-left: 27px;
+}
+
+.text-h3{
+    text-align: center;
+    text-decoration: underline;
+    font-family: "Host Grotesk", sans-serif;
+}
+.text-price{
+    text-decoration-color: #cfc2aa;
+    font-weight: bold;
+    font-family: "Host Grotesk", sans-serif;
+}
+
+p{
+    font-family: "Host Grotesk", sans-serif;
+    font-weight: 300;
+}
 
 /*box del merch*/
-.boxmerch{
+.box-merch{
     background-color: #cfc2aa;
     width: 270px;
-    height: 310px;
+    height: 320px;
     border-radius: 10px;
     margin: 1px;
     margin-left: 50px;
+    display: inline;
+    justify-content: center;
 }
+
 .box{
     display: flex;
+}
+
+.bt-merch{
+    padding: 9px 10px;
+    color: #cfc2aa;
+    border-radius: 150px;
+    border: 0;
+    background-color: #16798db6;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+#bt{
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.bt-merch:hover{
+    opacity: 0.5;
+}
+
+.img-merch{
+    width: 200px;
+    height: 200px;
+    position: relative;
+    left: 30px;
+}
+
+#merch_text{
+    text-align: center;
+    padding: 55px;
+    margin-left: 10px;
 }
 
 /*registro*/
@@ -113,13 +190,17 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    padding: 100px 55px;
+}
+
+.text-re{
+    color: #044c5c;
 }
 
 /*footer*/
 .foter{
     background-color: white;
-    height: 323px;
-    width: 1340px;
     
 }
 
@@ -138,6 +219,22 @@ i{
     display: flex;
     align-items: end;
     justify-content: flex-end;
+
+}
+#mail-box{
+    width: 310px;
+    height: 40px;
+    border-radius: 5px;
+    border-color: #080a0a;
+    background-color: white;
+}
+#bt-em{
+    width: 50px;
+    height: 29px;
+}
+
+.text-em{
+    font-family:"Host Grotesk", sans-serif;
 }
 
 .boxf{
@@ -147,17 +244,18 @@ i{
     
     width: 262px;
     height: 276px;
-
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-
     
+    position: relative;
+    left: 255px;
+
+    display: inline-flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-/*
-.textp{
-    text-wrap: wrap;
-    text-wrap-style: balance;
-}*/
+/*css <p>*/
+p{
+    text-align: center;
+}       
+
